--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@shadcn/ui": "^0.0.4",
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
     "framer-motion": "^12.5.0",
+    "geolib": "^3.3.4",
     "notiflix": "^3.2.8",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
